who wansa high nah

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
   Instagram
@@ -18,15 +19,16 @@
 
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <ul>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+  </ul>
 
   &copy; 2014 Instagram
 </body>
